--- a/index.html
+++ b/index.html
@@ -56,17 +56,18 @@
 
   <h2>Experience</h2>
     <h3>
-      <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer
-      <span>March 2017 to present</span>
+      <a href="https://a16z.com/">Andreessen Horowitz</a>, Investment Partner
+      <span>November 2017 to present</span>
     </h3>
     <ul class="bullet">
       <li>
-        <a href="https://www.tensorflow.org/">TensorFlow</a>
+        Focusing on crypto-network and A.I. investments.
       </li>
     </ul>
     <h3>
-      <a href="https://x.company/">Google[x]</a>, Software Engineer
-      <span>August 2014 to March 2017</span>
+      <a href="https://x.company/">Google[x]</a> /
+      <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer and Researcher
+      <span>Aug. 2014 to Nov. 2017</span>
     </h3>
     <ul class="bullet">
       <li>
