--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </ul>
     <h3>
       <a href="https://x.company/">Google[x]</a> /
-      <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer and Researcher
+      <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer, Researcher
       <span>Aug. 2014 to Nov. 2017</span>
     </h3>
     <ul class="bullet">
@@ -291,7 +291,7 @@
     </p>
 
 
-    <!-- <h3 id="tantalum">
+    <h3 id="tantalum">
       Tantalum, UNIX Like Operating System
     </h3>
     <p>
@@ -303,7 +303,7 @@
     <p class="final">
       Code sample:
       <span class="inline-code">git clone git://enrage.me/tantalum.git</span>
-    </p> -->
+    </p>
 
     <h3 id="galadriel">
       Galadriel, Compiler for Java-like Language
@@ -370,7 +370,7 @@
     <p class="final">
       Code sample: nb-classifier.{<a href="http://git.io/U2b6Mw">h</a>,
       <a href="http://git.io/mA14bQ">cpp</a>}
-    </p> -->
+    </p>
 
     <h3 id="mazewar">
       Distributed Mazewar (<a href="/media/mazewar-protocol.pdf">protocol</a>)
@@ -383,7 +383,7 @@
       the need for a central server. This project is built using
       <a href="#simone" rel="tag">Simone</a>.
     </p>
-
+ -->
 
   <h2>Teaching</h2>
     <h3>Course Assistant & Section Leader</h3>
@@ -412,7 +412,7 @@
     </ul>
 
 
-  <h2 id="coursework">Relevant College Coursework</h2>
+<!--   <h2 id="coursework">Relevant College Coursework</h2>
   <p>Cumulative GPA for this set of eleven courses: <strong>3.8</strong></p>
   <ul class="bullet">
     <li>
@@ -458,7 +458,7 @@
     <li>Improvisational Theater (TAPS 103)</li>
     <li>Acting for Non-Majors (TAPS 20A)</li>
   </ul>
-
+ -->
   <h2>Random</h2>
     <ul class="bullet">
       <li>
