--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
 
   <h2>Experience</h2>
     <h3>
-      <a href="https://a16z.com/">Andreessen Horowitz</a>, Investment Partner
+      <a href="https://a16zcrypto.com/">a16zcrypto</a>, Partner
       <span>November 2017 to present</span>
     </h3>
     <ul class="bullet">
       <li>
-        Focusing on crypto-network and A.I. investments.
+        Investing in decentralized networks.
       </li>
     </ul>
     <h3>
-      <a href="https://x.company/">Google[x]</a> /
+      <a href="https://x.company/">GoogleX</a> /
       <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer, Researcher
       <span>Aug. 2014 to Nov. 2017</span>
     </h3>
     <ul class="bullet">
       <li>
-        &#8704;x.Automate[x]: Robotics ^ Machine Learning
+        Robotics ^ Distributed Systems ^ Machine Learning
       </li>
       <li>
         Lead author of: <strong>Collective Robot Reinforcement Learning [...]</strong> (<a href="https://arxiv.org/abs/1610.00673">paper</a>)
@@ -229,7 +229,7 @@
       </li>
     </ul>
 
-  <h2>Code</h2>
+<!--   <h2>Code</h2>
     <h3 id="sphene">
       Sphene, NetFPGA Based Internet Router
         (<a href="https://github.com/ali01/sphene">github</a>,
@@ -355,7 +355,7 @@
     <p>
       Code sample: loess.{<a href="http://git.io/52ymEA">py</a>}
     </p>
-<!--
+
     <h3>
       Radon, C++ Framework for Logistic Regression & Naive Bayes
       (<a href="https://github.com/ali01/radon">github</a>)
@@ -383,7 +383,7 @@
       the need for a central server. This project is built using
       <a href="#simone" rel="tag">Simone</a>.
     </p>
- -->
+  -->
 
   <h2>Teaching</h2>
     <h3>Course Assistant & Section Leader</h3>
