--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <ul>
     <li>
       <strong>Master's Degree</strong>, Computer Science,
-        <a href="http://stanford.io/RkMnMf">Systems Track</a>
+        Distributed Systems ^ Machine Learning
         <!-- <span>on leave</span> -->
     </li>
     <li>
       <strong>Bachelor's Degree</strong>, Computer Science,
-        <a href="http://stanford.io/1m5A7JB">Systems Track</a>
+        Distributed Systems
         <span>2006 - 2010</span>
     </li>
   </ul>
@@ -65,9 +65,18 @@
       </li>
     </ul>
     <h3>
-      <a href="https://x.company/">GoogleX</a> /
-      <a href="https://research.google.com/teams/brain/">Google Brain</a>, Software Engineer, Researcher
-      <span>Aug. 2014 to Nov. 2017</span>
+      <a href="https://ai.google/research/teams/brain">Google Brain</a>,
+      Software Engineer
+      <span>Dec. 2016 to Nov. 2017</span>
+    </h3>
+    <ul class="bullet">
+      <li>
+        <a href="https://www.tensorflow.org/">TensorFlow</a>, Core Contributor
+      </li>
+    </ul>
+    <h3>
+      <a href="https://x.company/">GoogleX</a>, Software Engineer, Researcher
+      <span>Aug. 2014 to Dec. 2016</span>
     </h3>
     <ul class="bullet">
       <li>
