--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <header id="header">
     <h1>Ali Yahya</h1>
   </header>
+  <div class="subtitle">
+    <a href="https://twitter.com/ali01/">Twitter</a>,
+    <a href="https://outlast.me/">Blog</a>
+  </div>
 
   <section class="content clearfix">
 
@@ -56,7 +60,8 @@
 
   <h2>Experience</h2>
     <h3>
-      <a href="https://a16zcrypto.com/">a16z crypto</a>, Partner
+      <a href="https://a16zcrypto.com/author/ali-yahya/">a16z crypto</a>,
+      Partner
       <span>November 2017 to present</span>
     </h3>
     <ul class="bullet">
