--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120952773-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-120952773-2');
+  </script>
+
   <title>Ali Yahya</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -421,7 +431,7 @@
       </li>
       <li>
         <strong><a href="http://cs249a.stanford.edu">CS 249A</a>,
-        OOP from a Modeling and Simulation Perspective</strong>
+        Mission and Life-Critical Applications</strong>
       </li>
     </ul>
 
