--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Ali Yahya</h1>
   </header>
   <div class="subtitle">
-    <a href="https://twitter.com/ali01/">Twitter</a>,
+    <a href="https://twitter.com/ali01/" class="twitter">Twitter</a>,
     <a href="https://outlast.me/">Blog</a>
   </div>
 
