--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </h3>
     <ul class="bullet">
       <li>
-        Led a 3-6 person engineering team to launched Athena's main product &mdash; a tool that presents the tree of
+        Led a 3-6 person engineering team to launch Athena's main product &mdash; a tool that presents the tree of
         knowledge as a graph where nodes are concepts and edges are
         dependencies &mdash; to over 500 students across two classes at
         Stanford.
