--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
       </li>
     </ul>
     <h3>
-      <a href="http://athena.ai">Athena</a>,
-      Founder & CTO<span>2012 - 2013</span>
+      Athena, Founder & CTO<span>2012 - 2013</span>
     </h3>
     <ul class="bullet">
       <li>
