--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </ul>
 
     <h3 id="ai">
-      <a href="http://ai.stanford.edu/">Artificial Intelligence Lab</a>,
+      <a href="http://ai.stanford.edu/">Stanford Artificial Intelligence Lab</a>,
       Research
       <span>October - December, 2010</span>
     </h3>
@@ -170,7 +170,7 @@
 
     <h3 id="netlab">
       <a href="http://yuba.stanford.edu">
-        High Performance Networking Lab</a>, Research
+        Stanford High Performance Networking Lab</a>, Research
       <span>Sept - June, 2012</span>
     </h3>
     <ul class="bullet">
@@ -190,8 +190,8 @@
       </li>
     </ul>
 
-<!--     <h3 id="scs">
-      <a href="http://www.scs.stanford.edu">Secure Computer Systems Lab</a>,
+    <h3 id="scs">
+      <a href="http://www.scs.stanford.edu">Stanford Secure Computer Systems Lab</a>,
       Research
       <span>2011 - 2012</span>
     </h3>
@@ -207,9 +207,9 @@
         securely support I/O operations like disk or network access.
       </li>
     </ul>
- -->
+
     <h3 id="dsg">
-      <a href="http://gregorio.stanford.edu/">Distributed Systems Group</a>,
+      <a href="http://gregorio.stanford.edu/">Stanford Distributed Systems Group</a>,
       Independent Research
       <span>January - June, 2009</span>
     </h3>
