--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <li>
       <strong>Master's Degree</strong>, Computer Science,
         Distributed Systems ^ Machine Learning
-        <span>on leave</span>
+        <!-- <span>on leave</span> -->
     </li>
     <li>
       <strong>Bachelor's Degree</strong>, Computer Science,
