remove contact me tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body class="resume">
 
-<a href="https://21.co/alive/" id="contact-me">Contact Me</a>
+<!-- <a href="https://21.co/alive/" id="contact-me">Contact Me</a> -->
 <div id="container">
 
   <header id="header">
