--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </li>
     </ul>
     <h3>
-      Athena, Founder & CTO<span>2012 - 2013</span>
+      Athena, CTO<span>2012 - 2013</span>
     </h3>
     <ul class="bullet">
       <li>
