--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </ul>
     <h3>
       <a href="https://ai.google/research/teams/brain">Google Brain</a>,
-      Software Engineer
+      Software Engineer, Researcher
       <span>Dec. 2016 to Nov. 2017</span>
     </h3>
     <ul class="bullet">
