--- a/index.html
+++ b/index.html
@@ -70,13 +70,23 @@
 
   <h2>Experience</h2>
     <h3>
-      <a href="https://a16zcrypto.com/author/ali-yahya/">a16z crypto</a>,
-      Partner
-      <span>November 2017 to present</span>
+      <a href="https://a16z.com">Andreessen Horowitz</a>,
+      General Partner
+      <span>April 2021 to present</span>
     </h3>
     <ul class="bullet">
       <li>
-        Investing in decentralized networks.
+        Investing in web3.
+      </li>
+    </ul>
+    <h3>
+      <a href="https://a16zcrypto.com/author/ali-yahya/">a16z crypto</a>,
+      Partner
+      <span>November 2017 to April 2021</span>
+    </h3>
+    <ul class="bullet">
+      <li>
+        Investing in web3.
       </li>
     </ul>
     <h3>
@@ -232,7 +242,7 @@
     </ul>
 
 
-    <h3>Stanford's
+<!--     <h3>Stanford's
       <a href="http://etl.stanford.edu">Entrepreneurial Thought Leaders</a>
       Seminar
     </h3>
@@ -250,7 +260,7 @@
         Sheryl Sandberg, Steve Jurvetson, Jeff Hawkins, Jensen Huang,
         Vinod Khosla, Steve Ballmer, Tim Draper, and many others.
       </li>
-    </ul>
+    </ul> -->
 
 <!--   <h2>Code</h2>
     <h3 id="sphene">
