a16z crypto => Andreessen Horowitz

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </li>
     </ul>
     <h3>
-      <a href="https://a16zcrypto.com/author/ali-yahya/">a16z crypto</a>,
+      <a href="https://a16z.com">Andreessen Horowitz</a>,
       Partner
       <span>November 2017 to April 2021</span>
     </h3>
